# bazel-gazelle-sample-web-extension

./: .bazelignore  .bazelrc  BUILD  MODULE.bazel  Makefile  README.md  WORKSPACE  defs.bzl  go.mod  go.sum  renovate.json
gazelle/: BUILD  configure.go  deps.bzl  generate.go  kinds.go  lang.go  resolve.go
gazelle/config/: BUILD  directives.go  imports.go  kinds.go  webConfig.go
gazelle/constants/: BUILD  constants.go
gazelle/file/: BUILD.bazel  patterns.go  utils.go
gazelle/generate/: BUILD.bazel  base_rule.go  js_library_rule.go  js_test_rule.go  rules.go  ts_project_rule.go
gazelle/parse/: BUILD.bazel  imports.go  parse.go  parse_test.go
gazelle/resolve/: BUILD.bazel  builtins.go
gazelle/tests/js_files/: 1.test.js  2.jsx  2.test.jsx  3.mjs  3.test.mjs  4.cjs  4.test.cjs  BUILD.out
gazelle/tests/ts_files/: BUILD.in  BUILD.out
gazelle/tests/workspace_traversal/: BUILD.out  expectedStderr.txt
gazelle/tests/workspace_traversal/a/: file.js
gazelle/tests/workspace_traversal/b/e/: BUILD.out
gazelle/utils/: BUILD  colors.go  rules.go  utils.go
