"bazel_gazelle_sample_web_extension"

module(
    name = "bazel_gazelle_sample_web_extension",
    version = "0.0.1",
)

bazel_dep(
    name = "rules_go",
    version = "0.59.0",
    repo_name = "io_bazel_rules_go",
)
bazel_dep(
    name = "gazelle",
    version = "0.50.0",
    repo_name = "bazel_gazelle",
)

go_sdk = use_extension("@io_bazel_rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(version = "1.25.5")
